fixed some alignment issues and added resume button

--- a/css/main.css
+++ b/css/main.css
@@ -82,17 +82,14 @@
   .techContainer {
     width: 60%;
     padding: 1rem;
-    margin-top: 15%;
   }
 
   .contactBtnsContainer {
     -webkit-flex-direction: column;
     -ms-flex-direction: column;
     flex-direction: column;
-    margin-top: 15%;
   }
   .contact {
-    margin-top: 1rem;
     height: 3.5rem;
     border: solid white 2px;
   }
